<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.glleung.parkinggarageautomation.new_user">

    <TextView android:id="@+id/new_user_welcome"
        android:text="@string/new_user_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="30dp"/>

    <EditText  android:id="@+id/first_name"
        android:hint="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/new_user_welcome"/>
    <EditText  android:id="@+id/last_name"
        android:hint="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"/>
    <EditText  android:id="@+id/phone"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name"/>
    <EditText  android:id="@+id/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"/>

    <TextView android:id="@+id/payment"
        android:text="@string/payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:layout_below="@id/email"/>
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/payment_options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_below="@id/payment">
        <RadioButton android:id="@+id/credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit"/>
        <RadioButton android:id="@+id/venmo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venmo"/>
        <RadioButton android:id="@+id/paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paypal"/>
    </RadioGroup>

    <Button android:id="@+id/next"
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/payment_options"/>


</RelativeLayout>
