<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <ImageView android:id="@+id/garage"
        android:src="@drawable/garage"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp"/>
    <TextView android:id="@+id/login_welcome"
        android:text="@string/login_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:layout_below="@id/garage"/>
    <TextView android:id="@+id/welcome_prompt"
        android:text="@string/welcome_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:layout_below="@id/login_welcome"/>
    <EditText android:id="@+id/username"
        android:hint="@string/username"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcome_prompt"/>
    <EditText android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username"/>
    <Button android:id="@+id/login"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"/>
    <Button android:id="@+id/new_user"
        android:text="@string/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login"/>



</RelativeLayout>
