<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.glleung.parkinggarageautomation.main">

        <ImageView android:id="@+id/garage"
            android:src="@drawable/garage"
            android:layout_centerHorizontal="true"
            android:layout_width="150dp"
            android:layout_height="150dp"/>
        <TextView android:id="@+id/main_welcome"
            android:text="@string/main_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:layout_below="@id/garage"/>

        <!-- View Info-->
        <TextView android:id="@+id/view"
            android:text="@string/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:layout_below="@id/main_welcome"/>
        <View android:id="@+id/separator"
            android:background="#d3d3d3"
            android:layout_width = "fill_parent"
            android:layout_height="1dip"
            android:layout_centerVertical ="true"
            android:layout_below="@id/view"/>
        <Button android:id="@+id/view_reservations"
            android:text="@string/view_reservations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/separator"/>
        <Button android:id="@+id/view_vehicles"
            android:text="@string/view_vehicles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_reservations"/>
        <!-- Manage Account-->
        <TextView android:id="@+id/manage"
            android:text="@string/manage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:textSize="15dp"
            android:layout_below="@id/view_vehicles"/>
        <View android:id="@+id/separator2"
            android:background="#d3d3d3"
            android:layout_width = "fill_parent"
            android:layout_height="1dip"
            android:layout_centerVertical ="true"
            android:layout_below="@id/manage"/>
        <Button android:id="@+id/edit_account"
            android:text="@string/edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/separator2"/>
        <Button android:id="@+id/create_reservations"
            android:text="@string/create_reservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_account"/>
        <Button android:id="@+id/register_vehicles"
            android:text="@string/register_vehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_reservations"/>
    </RelativeLayout>
    </ScrollView>
